fix alignment of unit tests, give overall pass status of unit tests, fix alignment of form7 error message

--- a/.source/content/css/btc.css
+++ b/.source/content/css/btc.css
@@ -105,6 +105,9 @@ pre {
     clear: both;
     margin: 10px 0 10px 0;
 }
+#form7 .error {
+    clear: both;
+}
 #form7 .codeblock, #unitTests7 .codeblock {
     max-height: 200px;
 }
